# tech-access-platform

./: .replit  README.md  auth.py  config.py  main.py  pyproject.toml  quick_test.py  refactor_long_lines.py  render.yaml  requirements.txt  run_tests.py  test_endpoints.py  test_users.py  users.py
app/: __init__.py  api.py  auth.py  categories.py  email_service.py  events.py  extensions.py  mail.py  main.py  models.py  tasks.py
attached_assets/: Pasted--1-Create-dashboard-blueprint-create-file-app-dashboard-py-add-from-flask-import-Blueprint-rend-1748564832853.txt  Pasted--1-Define-your-Event-and-RSVP-models-if-not-already-open-app-models-py-add-from-extensions-im-1748564928812.txt  Pasted--1-Install-the-Stripe-SDK-run-in-shell-poetry-add-stripe-2-Configure-your-Stripe-secret-k-1748565150714.txt  Pasted--1-Update-config-py-with-JWT-and-secret-settings-open-config-py-insert-under-SUPABASE-KEY--1748563211108.txt  Pasted-Update-config-py-with-JWT-and-secret-settings-open-config-py-insert-under-SUPABASE-KEY-S-1748563250103.txt
templates/: 404.html  500.html  _macros.html  base.html  company_dashboard.html  company_register.html  company_search_results.html  create_category.html  create_event.html  edit_category.html  edit_event.html  event_detail.html  event_list.html  events.html  faq.html  index.html  layout.html  list_categories.html  login.html  member_dashboard.html  my_favorites.html  my_rsvps.html  profile.html  register.html  search_results.html  signup.html  terms_of_service.html  testing_opportunities.html
tests/: conftest.py  test_admin_dashboard.py  (+25 more)
(+46 files in other folders)
