[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
werkzeug = "^3.1.3"
pyjwt = "^2.10.1"
marshmallow = "^4.0.0"
pytest = "^8.3.5"
pytest-flask = "^1.3.0"
flask-marshmallow = "^1.3.0"
apscheduler = "^3.11.0"
flask-bcrypt = "^1.0.1"
requests = "^2.32.3"
supabase = "^2.15.2"
bcrypt = "^4.3.0"
flask-jwt-extended = "^4.7.1"
stripe = "^12.2.0"
sendgrid = "^6.12.3"
marshmallow-sqlalchemy = "^1.4.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"